$ 7.0.16
% v 7.0.16
_ December 22, 2023
* Fix: New installs on Android 13 and up were not asking for updated image and video permissions after the recent update. This resulted in the Gallery button on posting views not working. This is now fixed.
* Fix: MP4 in thread videos will now pause when navigating away from the thread. They will also pause when the app is stopped/sent to the background.

$ 7.0.15
% v 7.0.15
_ September 22, 2023
* Fix: New installs on Android 13 were not asking for Notification permission after the recent update. When Notifications is checked on in Settings, Android 13 installs will now ask for notification permissions if ShackBrowse does not have it so notifications work properly.

$ 7.0.14
% v 7.0.14
_ September 16, 2023
* Change winchatty.com calls to HTTPS as a fix for possible loading issues. These calls did not have any authentication or credentials, but we should use HTTPS anyways.

$ 7.0.13
% v 7.0.13
_ May 26, 2023
* Crash fix: Handle frozen thread replies as it was previously unhandled. Now a toast message will show up and the pending post will be removed.

$ 7.0.12
% v 7.0.12
_ May 9, 2023
* Minor bug fix: Trim the username of leading/trailing spaces to prevent an issue with push notification registration. This would lead to no push notifications being sent.

$ 7.0.11
% v 7.0.11
_ May 7, 2023
* Push Notifications return! Enable them in Settings -> Notifications. Turn on Reply notifications for replies, vanity notifications for mentions of your username, and add keywords for notifications when a keyword in your list matches. Use the Block List to block notifications from people you don't want to receive notifications for.

$ 7.0.10
% v 7.0.10
_ Apr 17, 2023
* Removed the Political warning popup. Use your own best judgement on the filters you use and threads you read.

$ 7.0.9
% v 7.0.9
_ Apr 3, 2023
* Revive the background check for new Shack Messages. The time period between checks is configurable in Settings -> Notifications.
